--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -56,7 +56,7 @@
                     <a  th:href="@{|/cartitem/add/${book.id}|}" onclick="return confirm('장바구니에 추가 하시겠습니까?')" class="btn btn-sm btn-primary" style="width: 150px">장바구니 담기</a>
                 </div>
                 <div>
-                    <a th:href="@{|/wish/add/${book.id}|}" class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
+                    <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')" class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
                 </div>
             </div>
         </div>
