--- a/src/main/resources/templates/orders/ordersPay.html
+++ b/src/main/resources/templates/orders/ordersPay.html
@@ -7,7 +7,18 @@
         <!--        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">-->
         <!--            <div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>-->
         <!--        </div>-->
-        <button type="button" class="btn btn-primary w-100 py-2" onclick="pclose1()">홈페이지</button>
+        <div class="main-container">
+            <div>
+                <span><img src="..." alt="orderImg"></span>
+                <ul>
+                    <li>
+                        <span th:text="${orders.book.subject}"></span>
+                        <span th:text="${orders.book.price}"></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <button type="button" class="btn btn-primary w-100 py-2" onclick="pclose1()">결제</button>
     </form>
 </html>
 
