--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -7,9 +7,10 @@
         <h1 th:if="${categoryEntity != null}" th:text="${categoryEntity.categoryName}"></h1>
         <h1 th:if="${categoryEntity == null}">EBook</h1>
     </div>
-    <div  class="category-button-container" >
+    <div class="category-button-container">
         <span><a th:href="@{/book/list}" class="btn btn-primary btn-lg">EBook</a></span>
-        <span th:if="${categoryList != null}" th:each="category : ${categoryList}"><a th:href="@{|/book/list/${category.categoryName}|}" class="btn btn-primary btn-lg">[[${category.categoryName}]]</a></span>
+        <span th:if="${categoryList != null}" th:each="category : ${categoryList}"><a
+                th:href="@{|/book/list/${category.categoryName}|}" class="btn btn-primary btn-lg">[[${category.categoryName}]]</a></span>
     </div>
 
     <div class="main-container">
@@ -61,17 +62,18 @@
                 </td>
                 <td>
                     <ul>
-                        <li>
-                            <a href="#" class="btn btn-primary">장바구니</a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-primary">찜</a>
-                        </li>
+                        <div style="margin-bottom:5px">
+                            <a th:href="@{|/cartitem/add/${book.id}|}" onclick="return confirm('장바구니에 추가 하시겠습니까?')"
+                               class="btn btn-sm btn-primary" style="width: 150px">장바구니 담기</a>
+                        </div>
+                        <div>
+                            <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')"
+                               class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
+                        </div>
                         <li>
                             <!--수정중-->
-
-                                <a th:href="@{/orders/pay/progress}"  class="btn btn-primary" onclick="movePage([[${book.id}]])" >결제</a>
-
+                            <a th:href="@{/orders/pay/progress}" class="btn btn-primary"
+                               onclick="movePage([[${book.id}]])">결제</a>
                         </li>
                     </ul>
                 </td>
