--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -53,7 +53,7 @@
                     <a class="btn btn-sm btn-primary" style="width: 150px">바로구매</a>
                 </div>
                 <div style="margin-bottom:5px">
-                    <a  th:href="@{|/cartitem/add/${book.id}|}" onclick="return confirm('장바구니에 추가 하시겠습니까?')" class="btn btn-sm btn-primary" style="width: 150px">장바구니 담기</a>
+                    <a class="addCartItem btn btn-sm btn-primary" style="width: 150px" th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">장바구니 담기</a>
                 </div>
                 <div>
                     <a th:href="@{|/wish/add/${book.id}|}" onclick="return confirm('찜 목록에 추가 하시겠습니까?')" class="btn btn-sm btn-primary" style="width: 150px">찜 하기</a>
@@ -105,5 +105,50 @@
             </div>
         </div>
     </div>
+    <script>
+        $(document).ready(function () {
+    $(".addCartItem").click(function () {
+        var bookId = this.id.split('_')[1];
+
+        Swal.fire({
+            title: '장바구니에',
+            text: '해당 상품을 담으시겠습니까?',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: '담기',
+            cancelButtonText: '취소',
+            preConfirm: () => {
+                return new Promise((resolve) => {
+                    // Ajax 요청을 통한 서버에서의 삭제 작업
+                    $.ajax({
+                        url: '/cartitem/add/' + bookId,
+                        type: 'GET',
+                        success: function (data) {
+                              resolve(true);
+                        },
+                        error: function () {
+                            resolve(false);
+                        }
+                    });
+                });
+            }
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                Swal.fire(
+                    '장바구니에 상품을 담았습니다.',
+                    '',
+                    'success'
+                ).then(() => {
+                    window.location.href = '/wish/list';
+                });
+            }
+        });
+    });
+});
+
+    </script>
 </div>
 </html>
