--- a/src/main/resources/templates/wish/wish_list.html
+++ b/src/main/resources/templates/wish/wish_list.html
@@ -64,13 +64,13 @@
                         </td>
                         <td th:text="${book.price}"></td>
                         <td style="align-items:center;">
+                            <!-- 상품을 장바구니에 담는 버튼 -->
+                            <div class="btn btn-sm btn-outline-secondary">
+                                <a class="addCartItem" th:id="'addCartItem_' + ${book.id}" onclick="addCartItem(${book.id}); return false;">장바구니 담기</a>
+                            </div>
                             <!-- 찜 삭제 버튼 -->
                             <div class="btn btn-sm btn-outline-secondary">
                                 <a class="wishDelete" th:id="'wishDelete_' + ${book.id}" href="#" onclick="deleteEvent(${book.id}); return false;">삭제</a>
-                            </div>
-                            <!-- 이벤트를 장바구니에 담는 버튼 -->
-                            <div class="btn btn-sm btn-outline-secondary">
-                                <a th:href="@{|/cartitem/add/${book.id}|}" onclick="return confirm('장바구니에 추가 하시겠습니까?')">장바구니 담기</a>
                             </div>
                         </td>
                     </tr>
@@ -80,5 +80,50 @@
         </div>
     </div>
     <script type="text/javascript" src="/js/wish/wish.js"></script>
+    <script>
+        $(document).ready(function () {
+    $(".addCartItem").click(function () {
+        var bookId = this.id.split('_')[1];
+
+        Swal.fire({
+            title: '장바구니에',
+            text: '해당 상품을 담으시겠습니까?',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: '담기',
+            cancelButtonText: '취소',
+            preConfirm: () => {
+                return new Promise((resolve) => {
+                    // Ajax 요청을 통한 서버에서의 삭제 작업
+                    $.ajax({
+                        url: '/cartitem/add/' + bookId,
+                        type: 'GET',
+                        success: function (data) {
+                              resolve(true);
+                        },
+                        error: function () {
+                            resolve(false);
+                        }
+                    });
+                });
+            }
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                Swal.fire(
+                    '장바구니에 상품을 담았습니다.',
+                    '',
+                    'success'
+                ).then(() => {
+                    window.location.href = '/wish/list';
+                });
+            }
+        });
+    });
+});
+
+    </script>
 </div>
 </html>
