--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -105,9 +105,8 @@
                         <input type="submit" value="리뷰등록">
                     </form>
                     <div>
-                        <ul>
-                            <li th:if="${not #lists.isEmpty(book.reviewList)}" th:each="review : ${book.reviewList}" th:text="${review.content}"></li>
-                            <li th:if="${#lists.isEmpty(book.reviewList)}">리뷰가 없습니다.</li>
+                        <ul th:each="review : ${reviewList}">
+                            <li th:text="${review.content}"></li>
                         </ul>
                     </div>
                     <a th:href="@{|/review/delete/${book.id}|}"
