cartitem oderitem 작업

--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -142,7 +142,7 @@
                     '',
                     'success'
                 ).then(() => {
-                    window.location.href = '/wish/list';
+                    window.location.href = '/book/detail/' + bookId;
                 });
             }
         });
