--- a/src/main/resources/templates/cartitem/cart_list.html
+++ b/src/main/resources/templates/cartitem/cart_list.html
@@ -65,14 +65,14 @@
                                     </svg>
                                 </div>
                                 <div style="margin-left: 50px; justify-content:center;">
-                                    <a th:href="@{|/event/detail/${book.id}|}" th:text="${book.subject}"></a>
+                                    <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
                                 </div>
                             </div>
                         </td>
                         <td th:text="${book.price}"></td>
                         <td style="align-items:center;">
                             <div class="btn btn-sm btn-outline-secondary">
-                                <a href="/">주문</a>
+                                <a th:href="@{/orders/pay/progress}">주문</a>
                             </div>
                             <div class="btn btn-sm btn-outline-secondary">
                                 <a class="cartItemDelete" th:id="'cartItemDelete_' + ${book.id}" href="#" onclick="deleteEvent(${book.id}); return false;">삭제</a>
