좌측 멤버 레이아웃 링크 수정중

--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -72,8 +72,8 @@
                         </div>
                         <li>
                             <!--수정중-->
-                            <a th:href="@{/orders/pay/progress}" class="btn btn-primary"
-                               onclick="movePage([[${book.id}]])">결제</a>
+                            <a th:href="@{/orders/pay/progress}" class="btn btn-sm btn-primary"
+                               onclick="movePage([[${book.id}]])" style="width: 150px; margin-top:5px">결제</a>
                         </li>
                     </ul>
                 </td>
