--- a/src/main/resources/templates/member/member_layout.html
+++ b/src/main/resources/templates/member/member_layout.html
@@ -48,11 +48,11 @@
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매 목록</a>
+            <li><a th:href="@{/book/list/seller}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매 목록</a>
             </li>
             <li><a th:href="@{/rebate/seller/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">정산 내역</a>
             </li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">정산 확인</a>
+            <li><a th:href="@{/rebate/seller/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">정산 확인</a>
           </ul>
         </div>
       </li>
@@ -63,13 +63,14 @@
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매자 신청 리스트</a>
+            <li><a th:href="@{/apply/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매자 신청 리스트</a>
             </li>
             <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">신고 리스트</a>
             </li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">FAQ</a>
+                   <!--카카오비즈니스 관리자 1 대 1 채팅-->
+            <li><a href="https://center-pf.kakao.com/_xnuxbaG/chats" class="link-body-emphasis d-inline-flex text-decoration-none rounded">FAQ</a>
             </li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">이벤트</a>
+            <li><a th:href="@{/event/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">이벤트</a>
             </li>
           </ul>
         </div>
