--- a/src/main/resources/templates/member/member_layout.html
+++ b/src/main/resources/templates/member/member_layout.html
@@ -36,8 +36,8 @@
             </li>
             <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">결제 목록</a>
             </li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">대여 목록</a>
-            </li>
+<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">대여 목록</a>-->
+<!--            </li>-->
           </ul>
         </div>
       </li>
@@ -65,8 +65,8 @@
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li><a th:href="@{/apply/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매자 신청 리스트</a>
             </li>
-            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">신고 리스트</a>
-            </li>
+<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">신고 리스트</a>-->
+<!--            </li>-->
                    <!--카카오비즈니스 관리자 1 대 1 채팅-->
             <li><a href="https://center-pf.kakao.com/_xnuxbaG/chats" class="link-body-emphasis d-inline-flex text-decoration-none rounded">FAQ</a>
             </li>
