--- a/src/main/resources/templates/member/member_layout.html
+++ b/src/main/resources/templates/member/member_layout.html
@@ -67,8 +67,7 @@
             </li>
 <!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">신고 리스트</a>-->
 <!--            </li>-->
-                   <!--카카오비즈니스 관리자 1 대 1 채팅-->
-            <li><a href="https://center-pf.kakao.com/_xnuxbaG/chats" class="link-body-emphasis d-inline-flex text-decoration-none rounded">FAQ</a>
+            <li><a th:href="@{/faq/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">FAQ</a>
             </li>
             <li><a th:href="@{/event/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">이벤트</a>
             </li>
