--- a/src/main/resources/templates/member/member_Profile.html
+++ b/src/main/resources/templates/member/member_Profile.html
@@ -16,7 +16,7 @@
                   주문 목록 리스트
                 </div>
             </div>
-            <a th:href="@{/event/list}" class="btn btn-sm btn-primary">돌아가기</a>
+            <a href="/" class="btn btn-sm btn-primary">돌아가기</a>
         </div>
     </div>
 </div>
