--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,6 +3,8 @@
 <head>
     <title>Eat Book</title>
     <meta charset="utf-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
@@ -19,7 +21,6 @@
     <link rel="stylesheet" type="text/css" href="/css/wish/wish.css"/>
     <link rel="stylesheet" type="text/css" href="/css/faq/faq.css">
     <link rel="stylesheet" type="text/css" href="/css/event/event.css">
-    <link rel="stylesheet" type="text/css" href="/css/book/book.css">
     <link rel="stylesheet" type="text/css" href="/css/book/book_detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
