--- a/src/main/resources/templates/book/category_create_form.html
+++ b/src/main/resources/templates/book/category_create_form.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form th:action="@{/category/create}" method="post" >
-
-
+<html layout:decorate="~{memberLayout}">
+<form layout:fragment="content" th:action="@{/category/create}" method="post" >
     <div class="mb-3">
         <label for="categoryName" class="form-label">카테고리 이름</label>
         <input type="text" name="categoryName" id="categoryName" class="form-control">
-
-
     </div>
     <input type="submit" value="저장하기"  class="btn btn-primary my-2">
 </form>
-</body>
 </html>
