--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -140,14 +140,31 @@
                         </div>
                     </form>
                 </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">작성자</th>
+                        <th scope="col">내용</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                    </tr>
+                    </tbody>
+                </table>
                 <div class="a_comment_top">
                     <ul th:each="review : ${reviewList}">
                         <li th:text="${review.content}"></li>
                     </ul>
-                    <a th:href="@{|/review/delete/${book.id}|}"
-                       class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;"
-                       th:text="삭제">
-                    </a>
+                    <li>
+                        <a th:href="@{|/review/delete/${review.id}|}"
+                           class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;"
+                           th:text="삭제">
+                        </a>
+                    </li>
+
                 </div>
             </div>
         </div>
