--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -14,9 +14,16 @@
             margin-right: auto;
             padding-top: 50px;
             padding-bottom: 5px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content:space-between;
+        }
+        .a_comment_top ul {
+            list-style-type: none; /* 리스트 스타일 제거 */
+        }
+
+        .a_comment_top li {
+            margin-bottom: 50px; /* 각 리뷰 아래에 여백 추가 */
+        }
+        .a_comment_top li a {
+            margin-left: 50px; /* 삭제 버튼과 리뷰 사이에 여백 추가 */
         }
         .formation-item d-flex {
             border: 1px solid rgba(0, 0, 0, .125);
@@ -130,13 +137,11 @@
                 </div>
             </div>
             <div class="book_bottom-section">
-                <div class="justify-content-end" style="margin-bottom:5px">
+                <div class="mb-3">
+                    <label for="content" class="form-label"></label>
                     <form th:action="@{|/review/create/${book.id}|}" method="post">
-                        <textarea name="content" id="content" cols="50" rows="3"></textarea>
-                        <div class="btn btn-sm btn-primary">
-                            <input class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;"
-                                   type="submit" value="리뷰등록">
-                        </div>
+                        <textarea name="content" id="content" class="form-control" rows="3"></textarea>
+                        <button type="submit" class="btn btn-sm btn-primary" style="width: 100px; margin-top: 5px;">리뷰등록</button>
                     </form>
                 </div>
                 <div class="a_comment_top">
