책 리스트 이미지 업로드 구현 / fix/55

--- a/src/main/resources/templates/book/book_create_form.html
+++ b/src/main/resources/templates/book/book_create_form.html
@@ -61,8 +61,8 @@
     </div>
     <!-- 이미지 업로드 입력 필드 -->
     <div class="mb-3">
-        <label for="image" class="form-label">이미지 업로드</label>
-        <input type="file" id="image" name="file" accept="image/*">
+        <label for="thumbnail" class="form-label">이미지 업로드</label>
+        <input type="file" name="thumbnail" id="thumbnail" accept="image/png, image/gif, image/jpeg">
         <!-- 이미지 미리보기 -->
         <img id="preview" src="#" alt="미리보기" style="max-width: 200px; max-height: 200px; display: none;">
     </div>
