--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -46,6 +46,7 @@
                          aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
                          focusable="false">
                         <title>이벤트</title>
+                        <!-- th:src="@{|/file/${book.thumbnailImg}|}"                        -->
                         <rect width="400px" height="600px" fill="#55595c"/>
                         <text x="25%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
                     </svg>
