--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -287,7 +287,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="container">
-                    <div class="row d-flex align-items-center">
+                    <div class="row-top d-flex align-items-center" style="margin-top:100px;">
                         <div class="col-md-6">
                             <div class="banner-content">
                                 <h1 class="display-2 text-uppercase text-dark pb-5">EBook</h1>
@@ -297,8 +297,8 @@
                         </div>
                         <div class="col-md-5">
                             <div class="image-holder">
-                                <img style="width:657px; height:657px;"
-                                     src="https://image.aladin.co.kr/product/33116/15/cover200/k062937128_3.jpg?RS=170"
+                                <img style="width:500px; height:500px; margin:50px;"
+                                     src="https://image.yes24.com/goods/118379109/XL"
                                      alt="banner">
                             </div>
                         </div>
@@ -308,18 +308,18 @@
             </div>
             <div class="swiper-slide">
                 <div class="container">
-                    <div class="row d-flex flex-wrap align-items-center">
+                    <div class="row-top d-flex flex-wrap align-items-center" style="margin-top:100px;">
                         <div class="col-md-6">
                             <div class="banner-content">
-                                <h1 class="display-2 text-uppercase text-dark pb-5">책 제목</h1>
-                                <a href="shop.html" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">eBook
+                                <h1 class="display-2 text-uppercase text-dark pb-5">EBook</h1>
+                                <a th:href="@{/book/list}" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">eBook
                                     바로가기</a>
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="image-holder">
-                                <img style="width:657px; height:657px;"
-                                     src="https://image.aladin.co.kr/product/33074/28/cover200/k742937307_1.jpg?RS=170"
+                                <img style="width:500px; height:500px; margin:50px;"
+                                     src="https://image.yes24.com/goods/19040233/XL"
                                      alt="banner">
                             </div>
                         </div>
@@ -329,12 +329,12 @@
         </div>
     </div>
     <div class="swiper-icon swiper-arrow swiper-arrow-prev">
-        <svg class="chevron-left">
+        <svg class="chevron-left" style="margin-top:100px;">
             <use xlink:href="#chevron-left"/>
         </svg>
     </div>
     <div class="swiper-icon swiper-arrow swiper-arrow-next">
-        <svg class="chevron-right">
+        <svg class="chevron-right" style="margin-top:100px;">
             <use xlink:href="#chevron-right"/>
         </svg>
     </div>
