--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -41,15 +41,8 @@
         <div class="book_top-section">
             <div class="book_left-side">
                 <div style="width:400px; height:600px;">
-                    <svg class="bd-placeholder-img card-img-top" width="400px" height="600px"
-                         xmlns="http://www.w3.org/2000/svg" role="img"
-                         aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                         focusable="false">
-                        <title>이벤트</title>
-                        <!-- th:src="@{|/file/${book.thumbnailImg}|}"                        -->
-                        <rect width="400px" height="600px" fill="#55595c"/>
-                        <text x="25%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                    </svg>
+                    <img th:src="@{|/file/${book.thumbnailImg}|}" alt="사진" style="width:
+                    400px; height: 600px;">
                 </div>
             </div>
             <div class="center-detail">
