--- a/src/main/resources/templates/wish/wish_list.html
+++ b/src/main/resources/templates/wish/wish_list.html
@@ -51,15 +51,9 @@
                                 <td>
                                     <div class="d-flex">
                                         <div style="width:120px; height:120px;">
-                                            <svg class="bd-placeholder-img card-img-top" width="120px" height="120px"
-                                                 xmlns="http://www.w3.org/2000/svg" role="img"
-                                                 aria-label="Placeholder: Thumbnail"
-                                                 preserveAspectRatio="xMidYMid slice"
-                                                 focusable="false">
-                                                <title>이벤트</title>
-                                                <rect width="120px" height="120px" fill="#55595c"/>
-                                                <text x="25%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                                            </svg>
+                                            <div style="width:120px; height:120px;">
+                                                <img th:src="@{|/file/${book.thumbnailImg}|}" alt="사진" style="width: 120px; height: 120px;">
+                                            </div>
                                         </div>
                                         <div style="margin-left: 50px; justify-content:center;">
                                             <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
