홈페이지 수정중

--- a/src/main/resources/templates/apply/applyGuide.html
+++ b/src/main/resources/templates/apply/applyGuide.html
@@ -1,7 +1,8 @@
 <html layout:decorate="~{memberLayout}">
 <div layout:fragment="content">
     <h2>판매자 신청이 완료되었습니다.</h2>
-    <h4>판매자 신청 결과는 관리자 심사 후 이메일로 메일 발송됩니다.</h4>
+    <h4>판매자 신청 결과는 관리자 심사 후</h4>
+    <h4>이메일로 메일 발송됩니다.</h4>
     <h4>감사합니다.</h4>
     <a th:href="@{/}" class="btn btn-primary">메인으로</a>
 </div>>
