--- a/src/main/resources/static/css/main/mainhome.css
+++ b/src/main/resources/static/css/main/mainhome.css
@@ -131,10 +131,10 @@ a:hover {
   padding-top: 7em;
   padding-bottom: 7em;
 }
-.padding-xlarge {
+/*.padding-xlarge {
   padding-top: 9.5em;
   padding-bottom: 9.5em;
-}
+} */
 
 /* no padding */
 .no-padding-top {
