--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -226,7 +226,10 @@
                                     <a href="/" class="dropdown-item">쿠폰함</a>
                                 </li>
                                 <li>
-                                    <a href="single-product.html" class="dropdown-item">판매글 보기</a>
+                                    <a th:href="@{/apply/seller}" class="dropdown-item">판매자 신청하기</a>
+                                </li>
+                                <li>
+                                    <a th:if="${member != null and member.isSeller == true}" href="/" class="dropdown-item">판매글 보기</a>
                                 </li>
                                 <th:block th:if="principal != null ">
                                     <li>
@@ -691,18 +694,20 @@
     </div>
     <div class="swiper-pagination position-absolute text-center"></div>
 </section>
-<section id="yearly-sale" class="bg-light-blue overflow-hidden mt-5 padding-xlarge"
-         style="background-image: url('https://image.aladin.co.kr/product/30878/9/cover150/e672531362_1.jpg');background-position: right; background-repeat: no-repeat;">
+<section id="yearly-sale" class="bg-light-blue overflow-hidden mt-5 padding-xlarge">
     <div class="row d-flex flex-wrap align-items-center">
         <div class="col-md-6 col-sm-12">
             <div class="text-content offset-4 padding-medium">
-                <h3>대여 eBook</h3>
-                <h2 class="display-2 pb-5 text-uppercase text-dark">대여 eBook</h2>
-                <a href="shop.html" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">바로가기</a>
+                <h3>eBook</h3>
+                <h2 class="display-2 pb-5 text-uppercase text-dark">eBook</h2>
+                <a th:href="@{/book/list}" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">eBook
+                    바로가기</a>
             </div>
         </div>
         <div class="col-md-6 col-sm-12">
-
+            <img style="width:500px; height:500px; margin:50px;"
+                 src="https://image.yes24.com/goods/123122731/XL"
+                 alt="banner">
         </div>
     </div>
 </section>
@@ -867,32 +872,7 @@
     </div>
     <div class="swiper-pagination"></div>
 </section>
-<section id="subscribe" class="container-grid padding-large position-relative overflow-hidden">
-    <div class="container">
-        <div class="row">
-            <div class="subscribe-content bg-dark d-flex flex-wrap justify-content-center align-items-center padding-medium">
-                <div class="col-md-6 col-sm-12">
-                    <div class="display-header pe-3">
-                        <h2 class="display-7 text-uppercase text-light">Subscribe Us Now</h2>
-                        <p>Get latest news, updates and deals directly mailed to your inbox.</p>
-                    </div>
-                </div>
-                <div class="col-md-5 col-sm-12">
-                    <form class="subscription-form validate">
-                        <div class="input-group flex-wrap">
-                            <input class="form-control btn-rounded-none" type="email1" name="EMAIL"
-                                   placeholder="Your email1 address here" required="">
-                            <button class="btn btn-medium btn-primary text-uppercase btn-rounded-none" type="submit"
-                                    name="subscribe">Subscribe
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section id="instagram" class="padding-large overflow-hidden no-padding-top">
+<section id="instagram" class="padding-large overflow-hidden no-padding-top" style="margin-top:100px;">
     <div class="container">
         <div class="row">
             <div class="display-header text-uppercase text-dark text-center pb-3">
