--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -207,10 +207,12 @@
                                     <a href="checkout.html" class="dropdown-item">쿠폰함</a>
                                 </li>
                                 <li>
-                                    <a href="single-product.html" class="dropdown-item">판매글 보기</a>
+                                    <a th:if="${member != null and member.isSeller == true}"
+                                       th:href="@{/rebate/seller/list}" class="dropdown-item">판매글 보기</a>
                                 </li>
                                 <li>
-                                    <a href="contact.html" class="dropdown-item">정산 리스트</a>
+                                    <a th:if="${member != null and member.isSeller == true}"
+                                       th:href="@{/rebate/seller/list}" class="dropdown-item">판매자 정산 리스트</a>
                                 </li>
                                 <!-- admin 에게만 표시 -->
                                 <th:block sec:authorize="hasRole('ADMIN')">
